Update header width and padding styles

--- a/index.html
+++ b/index.html
@@ -34,12 +34,14 @@
     /* Header */
     .header {
       width: 100%;
+      max-width: 1200px;
+      margin: 0 auto 0 0;
       height: var(--header-height);
       background: #fff;
       display: flex;
       align-items: center;
-      justify-content: space-between;
-      padding: 0 32px;
+      justify-content: flex-start;
+      padding: 0 20px;
       box-sizing: border-box;
       border-bottom: 1px solid #F5F5F5;
       position: sticky;
