--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
       --button-radius: 12px;
       --button-border: #E0E0E0;
       --button-bg: #fff;
-      --button-hover-bg: linear-gradient(90deg, #EF7988 0%, #FF6C4A 50%, #F09366 100%);
     }
     html, body {
       margin: 0;
@@ -31,17 +30,21 @@
       display: flex;
       flex-direction: column;
     }
+    .container {
+      width: 100%;
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 0 20px;
+      box-sizing: border-box;
+    }
     /* Header */
     .header {
       width: 100%;
-      max-width: 1200px;
-      margin: 0 auto 0 0;
       height: var(--header-height);
       background: #fff;
       display: flex;
       align-items: center;
       justify-content: flex-start;
-      padding: 0 20px;
       box-sizing: border-box;
       border-bottom: 1px solid #F5F5F5;
       position: sticky;
@@ -73,7 +76,6 @@
       font-weight: 500;
       transition: color 0.2s;
       padding: 4px 0;
-      position: relative;
     }
     .nav a:hover {
       color: var(--menu-hover);
@@ -89,8 +91,6 @@
       font-weight: 600;
       cursor: pointer;
       transition: all 0.2s;
-      outline: none;
-      box-shadow: none;
     }
     .header-btn:hover {
       background: var(--gradient);
@@ -99,14 +99,11 @@
     }
     /* Hero Section */
     .hero {
-      width: 100%;
-      max-width: 700px;
-      margin: 0 auto;
-      padding: 80px 16px 40px 16px;
       display: flex;
       flex-direction: column;
-      align-items: flex-start;
-      text-align: left;
+      align-items: center;
+      text-align: center;
+      padding: 80px 16px 40px 16px;
     }
     .pre-header {
       font-size: 1.1rem;
@@ -121,14 +118,13 @@
       margin-bottom: 18px;
       display: flex;
       flex-wrap: wrap;
+      justify-content: center;
       gap: 8px;
     }
     .headline .gradient {
       background: var(--gradient);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
-      background-clip: text;
-      text-fill-color: transparent;
       display: inline-block;
     }
     .headline .black {
@@ -151,76 +147,36 @@
       color: #fff;
       cursor: pointer;
       transition: background 0.2s;
-      box-shadow: 0 2px 8px 0 rgba(255,108,74,0.08);
+      box-shadow: 0 2px 8px rgba(255,108,74,0.08);
     }
     .cta-btn:hover {
       background: linear-gradient(90deg, #EF7988 0%, #FF6C4A 50%, #F09366 100%);
     }
-    /* Responsive */
-    @media (max-width: 900px) {
-      .hero {
-        max-width: 100%;
-        padding: 60px 8vw 32px 8vw;
-      }
-      .header {
-        padding: 0 16px;
-      }
-      .nav {
-        gap: 20px;
-        margin-left: 20px;
-      }
-    }
-    @media (max-width: 600px) {
-      .header {
-        flex-direction: column;
-        height: auto;
-        padding: 12px 8px;
-        gap: 10px;
-        align-items: flex-start;
-      }
-      .logo {
-        font-size: 1.5rem;
-      }
-      .nav {
-        gap: 14px;
-        margin-left: 0;
-        margin-top: 8px;
-      }
-      .header-btn {
-        margin-left: 0;
-        margin-top: 10px;
-        width: 100%;
-        padding: 10px 0;
-      }
-      .hero {
-        padding: 40px 4vw 24px 4vw;
-      }
-      .headline {
-        font-size: 1.5rem;
-      }
-    }
   </style>
 </head>
 <body>
-  <header class="header">
-    <div class="logo"><span class="orange">Skill</span><span class="black">Nau</span></div>
-    <nav class="nav">
-      <a href="#intro">서비스 소개</a>
-      <a href="#process">진행 방법</a>
-      <a href="#cases">고객 사례</a>
-    </nav>
-    <button class="header-btn">디자이너 인재풀 등록</button>
-  </header>
-  <main>
-    <section class="hero">
-      <div class="pre-header">레퍼런스도 줬고, 방향도 설명했는데...</div>
-      <div class="headline">
-        <span class="gradient">디자인 외주,</span>
-        <span class="black">왜 늘 기대에 못 미칠까요?</span>
-      </div>
-      <div class="subtext">스킬나우는 디자인 기획부터 소통까지 전담 매니저가 함께 합니다.</div>
-      <button class="cta-btn">지금 디자인 의뢰하기</button>
-    </section>
-  </main>
+  <div class="container">
+    <header class="header">
+      <div class="logo"><span class="orange">Skill</span><span class="black">Nau</span></div>
+      <nav class="nav">
+        <a href="#intro">서비스 소개</a>
+        <a href="#process">진행 방법</a>
+        <a href="#cases">고객 사례</a>
+      </nav>
+      <button class="header-btn">디자이너 인재풀 등록</button>
+    </header>
+
+    <main>
+      <section class="hero">
+        <div class="pre-header">레퍼런스도 줬고, 방향도 설명했는데...</div>
+        <div class="headline">
+          <span class="gradient">디자인 외주,</span>
+          <span class="black">왜 늘 기대에 못 미칠까요?</span>
+        </div>
+        <div class="subtext">스킬나우는 디자인 기획부터 소통까지 전담 매니저가 함께 합니다.</div>
+        <button class="cta-btn">지금 디자인 의뢰하기</button>
+      </section>
+    </main>
+  </div>
 </body>
-</html> 
+</html>
