--- a/index.html
+++ b/index.html
@@ -215,23 +215,11 @@
       color: #888;
       margin-top: 8px;
     }
-    @media (max-width: 600px) {
-      .testimonial-box {
-        padding: 20px 8px;
-      }
-      .testimonial-content {
-        flex-direction: column;
-        gap: 12px;
-        align-items: center;
-      }
-      .testimonial-texts {
-        text-align: center;
-      }
-    }
+    
     .design-types-section {
       width: 100%;
       background: #fff;
-      padding: 60px 60px 60px 60px;
+      padding: 60px 20px;
     }
     .design-types-container {
       max-width: 960px;
@@ -399,29 +387,55 @@
       margin-left: 50px;
     }
     @media (max-width: 700px) {
-      .fail-reason-inner {
-        padding: 0 8px;
-      }
+        .fail-reason-section {
+    padding: 28px 0 18px 0;
+  }
       .fail-reason-grid {
         grid-template-columns: 1fr;
         grid-template-rows: repeat(5, auto);
-        gap: 8px;
+        gap: 30px;
         max-width: 98vw;
       }
+      .trust, .planning, .communication, .result {
+    width: 160px;
+    height: 80px;
+    /*padding-top: 4px;*/
+    aspect-ratio: 1/1;
+    min-width: 80px;
+    min-height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
       /*.trust, .communication, .planning, .result, .character-img-wrap {
         grid-column: 1 / 2 !important;
         justify-self: stretch !important;
         align-self: stretch !important;
       }*/
-      .trust, .planning {
+      .communication {
         grid-column: 1 / 2 !important;
         justify-self: end !important;  /* 우측 정렬 */
         align-self: start !important;
+        margin-right: 15%;
     }
-    .communication, .result {
+    .result {
+        grid-column: 1 / 2 !important;
+        justify-self: end !important;  /* 우측 정렬 */
+        align-self: start !important;
+        margin-right: 3%;
+    }
+    .trust {
         grid-column: 1 / 2 !important;
         justify-self: start !important;  /* 좌측 정렬 */
         align-self: start !important;
+        margin-left: 15%;
+    }
+    .planning {
+        grid-column: 1 / 2 !important;
+        justify-self: start !important;  /* 좌측 정렬 */
+        align-self: start !important;
+        margin-left: 3%;
     }
     .character-img-wrap {
         justify-self: center !important;
@@ -434,8 +448,7 @@
     .fail-reason-title {
       font-size: 2rem;
       font-size: 1.8rem;
-      font-weight: 700;
-      
+      font-weight: 700;      
       margin-bottom: 80px;
       color: #222;
       text-align: center;
@@ -445,6 +458,63 @@
       width: auto;
       display: block;
       object-fit: contain;
+    }
+    @media (max-width: 600px) {
+        .fail-reason-section {
+    padding: 28px 0 18px 0;
+  }
+      .fail-reason-grid {
+        display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto auto auto;
+    gap: 18px;
+    width: 100%;
+    max-width: 98vw;
+    justify-items: center;
+    align-items: start;
+      }
+      .trust, .planning, .communication, .result {
+            width: 96%;
+    max-width: 340px;
+    min-width: 120px;
+    min-height: 80px;
+    aspect-ratio: unset;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin: 0;
+    box-sizing: border-box;
+  }
+      /*.trust, .communication, .planning, .result, .character-img-wrap {
+        grid-column: 1 / 2 !important;
+        justify-self: stretch !important;
+        align-self: stretch !important;
+      }*/
+      .trust { grid-row: 1; grid-column: 1; }
+  .communication { grid-row: 1; grid-column: 2; }
+  .planning { grid-row: 2; grid-column: 1; }
+  .result { grid-row: 2; grid-column: 2; }
+    .character-img-wrap {
+        grid-row: 3;
+    grid-column: 1 / 3;
+    justify-self: center;
+    align-self: start;
+    margin-top: 24px;
+    }
+      .character-img {
+        max-width: 160px;
+      }
+    }
+    .fail-reason-title {
+      font-size: 2rem;
+      font-size: 1.8rem;
+      font-weight: 700;      
+      margin-bottom: 60px;
+      color: #222;
+      text-align: center;
+      margin-left: 5%;
+    margin-right: 5%;
     }
   </style>
 </head>
@@ -517,12 +587,12 @@
             <div class="mini-title">기획 문제</div>
             기획을 처음 해봐서 어떻게 잡아야 할지 감이 오지 않아요.
           </div>
-          <div class="character-img-wrap">
-            <img src="https://raw.githubusercontent.com/entjiny/skillnau-landing/main/images/memoji-character02-laptop-confused.png" alt="고민하는 캐릭터" class="character-img">
-          </div>
           <div class="bubble result">
             <div class="mini-title">결과물 문제</div>
             막상 받은 결과물이 생각했던 것과 전혀 달라서 아쉬워요.
+          </div>
+          <div class="character-img-wrap">
+            <img src="https://raw.githubusercontent.com/entjiny/skillnau-landing/main/images/memoji-character02-laptop-confused.png" alt="고민하는 캐릭터" class="character-img">
           </div>
         </div>
       </div>
@@ -717,7 +787,7 @@
       </div>
     </div>
     <div class="faq-bottom-row">
-        <div class="faq-bottom-text">더 궁금한 점이 있다면 언제든지 매니저에게 물어보세요!</div>
+        <div class="faq-bottom-text">더 궁금한 점이 있다면 언제든 매니저에게 물어보세요!</div>
         <a href="https://open.kakao.com/o/sM0keNDh" target="_blank" rel="noopener noreferrer" class="faq-inquiry-btn">1:1 문의하기</a>
       </div>
   </section>
@@ -1198,6 +1268,233 @@ main {
     box-sizing: border-box;
   }
 }
+
+/* 900px 이하 (태블릿) */
+@media (max-width: 900px) {
+  .hero {
+    padding: 100px 12px 60px 12px;
+  }
+  .pre-header {
+    font-size: 2.4em;
+  }
+  .headline {
+    font-size: 3.8em;
+  }
+  .subtext {
+    font-size: 1.8em;
+  }
+}
+
+/* 700px 이하 (모바일) */
+@media (max-width: 700px) {
+  .hero {
+    padding: 70px 8px 40px 8px;
+  }
+  .pre-header {
+    font-size: 1.8em;
+  }
+  .headline {
+    font-size: 3.2em;
+  }
+  .subtext {
+    font-size: 1.6em;
+  }
+}
+
+/* 600px 이하 (작은 모바일) */
+@media (max-width: 600px) {
+  .hero {
+    padding: 50px 4px 30px 4px;
+  }
+  .pre-header {
+    font-size: 1.4em;
+  }
+  .headline {
+    font-size: 2em;
+    line-height: 1.1; 
+  }
+  .subtext {
+    font-size: 1.1em;
+  }
+}
+
+/* 900px 이하 (태블릿) */
+@media (max-width: 900px) {
+  .testimonial-box {
+    padding: 30px 40px;
+  }
+  .testimonial-avatar {
+    height: 150px;
+    width: 150px;
+  }
+}
+
+/* 700px 이하 (모바일) */
+@media (max-width: 700px) {
+  .testimonial-box {
+    padding: 30px 40px;
+  }
+  .testimonial-avatar {
+    height: 140px;
+    width: 140px;
+  }
+}
+
+/* 600px 이하 (작은 모바일) */
+@media (max-width: 600px) {
+  .testimonial-box {
+    margin: 60px 14px 0 14px;
+    padding: 26px 30px;
+  }
+  .testimonial-content {
+        flex-direction: column;
+        gap: 12px;
+        align-items: center;
+      }
+      .testimonial-texts {
+        text-align: center;
+      }
+  .testimonial-avatar {
+    height: 130px;
+    width: 130px;
+  }
+}
+
+/* 900px 이하 (태블릿) */
+@media (max-width: 900px) {
+  .design-types-section {
+    padding: 60px 20px;
+    box-sizing: border-box;
+    width: 100%;
+    margin: 0 auto;
+  }
+  .design-types-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    max-width: 100%;
+    margin: 0 auto;
+    box-sizing: border-box;
+    padding: 0;
+  }
+  .design-types-title,
+  .design-types-list {
+    width: 100%;
+    max-width: 100%;
+    margin-left: 0;
+    margin-right: 0;
+    text-align: center;
+  }
+}
+@media (max-width: 700px) {
+  .design-types-container {
+    align-items: center;
+    width: 100%;
+    box-sizing: border-box;
+  }
+  .design-types-title,
+  .design-types-list {
+    width: 100%;
+    max-width: 100%;
+    margin-left: 0;
+    margin-right: 0;
+    text-align: center;
+  }
+}
+@media (max-width: 600px) {
+  .fail-reason-inner {
+    display: block !important;
+    max-width: 1000px;
+    margin: 0 auto;
+    padding: 0 !important;
+    text-align: center;
+  }
+  .fail-reason-grid {
+    display: grid !important;
+    grid-template-columns: 1fr 1fr !important;
+    gap: 24px !important;
+    width: fit-content !important;
+    max-width: 500px !important;
+    margin: 0 auto !important;
+    justify-items: center !important;
+    align-items: start;
+    padding: 0 !important;
+  }
+  .trust { 
+    grid-row: 1 !important; 
+    grid-column: 1 !important; 
+    justify-self: center !important; 
+    margin: 0 !important; 
+    width: 100% !important;
+    max-width: 180px !important;
+  }
+  .communication { 
+    grid-row: 1 !important; 
+    grid-column: 2 !important; 
+    justify-self: center !important; 
+    margin: 0 !important; 
+    width: 100% !important;
+    max-width: 180px !important;
+  }
+  .planning { 
+    grid-row: 2 !important; 
+    grid-column: 1 !important; 
+    justify-self: center !important; 
+    margin: 0 !important; 
+    width: 100% !important;
+    max-width: 180px !important;
+  }
+  .result { 
+    grid-row: 2 !important; 
+    grid-column: 2 !important; 
+    justify-self: center !important; 
+    margin: 0 !important; 
+    width: 100% !important;
+    max-width: 180px !important;
+  }
+  .character-img-wrap {
+    grid-row: 3;
+    grid-column: 1 / 3;
+    justify-self: center;
+    align-self: start;
+    margin-top: 24px;
+  }
+  .trust, .planning, .communication, .result {
+    width: 100% !important;
+    max-width: 180px !important;
+    min-width: 120px;
+    min-height: 80px;
+    padding: 12px 10px !important;
+    margin: 0 !important;
+    box-sizing: border-box;
+    text-align: center;
+    display: block !important;
+  }
+  .bubble {
+    max-width: 180px !important;
+    min-width: 120px;
+    min-height: 80px;
+    padding: 12px 10px !important;
+    margin: 0 !important;
+    box-sizing: border-box;
+    text-align: center;
+    display: block !important;
+  }
+  .mini-title {
+    text-align: center !important;
+    margin: 0 7% !important;
+    padding: 4px 8px !important;
+    display: block !important;
+    width: 120px !important;
+    height: 24px !important;
+    box-sizing: border-box !important;
+    font-size: 12px !important;
+    line-height: 16px !important;
+    overflow: hidden !important;
+  }
+}
+
 </style>
 
 <script>
