최신 모바일 디자인 반영

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- SEO 기본 -->
-  <title>SkillNau | 전담 매니저와 함께하는 실패 없는 디자인 외주</title>
+  <title>스킬나우 | 전담 매니저와 검증된 디자이너, 디자인 협업 솔루션</title>
   <meta name="description" content="스킬나우는 디자인 외주에 전담 매니저가 함께합니다. 기획부터 디자이너 매칭, 피드백까지 체계적인 협업으로 실패 없는 디자인 결과를 만들어보세요.">
   <meta name="keywords" content="디자인 외주, 디자인 매니징, 디자인 기획, UIUX 디자인, 상세페이지 디자인, 브랜딩, 스킬나우, 디자인 매칭, 디자인 매니저, 디자인 프로젝트, 콘텐츠 디자인">
   <meta name="author" content="SkillNau">
@@ -19,7 +19,7 @@
 
   <!-- Open Graph (Facebook, LinkedIn 등) -->
   <meta property="og:type" content="website">
-  <meta property="og:title" content="SkillNau - 실패 없는 디자인 외주, 전담 매니저와 시작하세요">
+  <meta property="og:title" content="스킬나우 | 전담 매니저와 검증된 디자이너, 디자인 협업 솔루션">
   <meta property="og:description" content="디자인 외주, 이제 실패하지 마세요. 전담 매니저가 함께하는 스킬나우에서 기획부터 매칭, 피드백까지 원스톱으로 해결하세요.">
   <meta property="og:image" content="https://raw.githubusercontent.com/entjiny/skillnau-landing/main/images/og_img02.png">
   <meta property="og:url" content="https://skillnau-landing.vercel.app/">
@@ -27,7 +27,7 @@
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="SkillNau - 실패 없는 디자인 외주, 전담 매니저와 시작하세요">
+  <meta name="twitter:title" content="스킬나우 | 전담 매니저와 검증된 디자이너, 디자인 협업 솔루션">
   <meta name="twitter:description" content="디자인 외주 실패 이유? 기획과 소통의 부재! 스킬나우가 전담 매니저와 함께 성공적인 디자인 협업을 돕습니다.">
   <meta name="twitter:image" content="https://raw.githubusercontent.com/entjiny/skillnau-landing/main/images/og_img02.png">
   <meta name="twitter:url" content="https://skillnau-landing.vercel.app/">
@@ -69,19 +69,28 @@
           <img src="https://raw.githubusercontent.com/entjiny/skillnau-landing/main/images/logo_orange.png" alt="SkillNau Logo" />
         </div>
         <button class="close-menu" aria-label="메뉴 닫기">×</button>
-        <nav>
-          <ul>
-            <li><a href="#service-advantage-section">서비스 소개</a></li>
-            <li><a href="#process-section-bg">진행 방법</a></li>
-            <li><a href="#review-section">고객 사례</a></li>
-          </ul>
-        </nav>
-        <hr class="mobile-menu-divider" />
+        <!-- 버튼 -->
         <div class="mobile-menu-btns">
           <a href="https://tally.so/r/w2dyEp" target="_blank" rel="noopener noreferrer" class="mobile-btn cta-btn">지금 디자인 의뢰하기</a>
           <a href="https://open.kakao.com/o/sM0keNDh" target="_blank" rel="noopener noreferrer" class="mobile-btn inquiry-btn">1:1 문의하기</a>
-          <a href="https://super-cendol-354c83.netlify.app" target="_blank" rel="noopener noreferrer" class="register-btn">디자이너 인재풀 등록</a>
         </div>
+        <!-- 메뉴 리스트 -->
+        <nav>
+          <ul class="mobile-menu-list">
+            <li><a href="#service-advantage-section">서비스 소개</a></li>
+            <li class="menu-divider"></li>
+            <li><a href="#process-section-bg">진행 방법</a></li>
+            <li class="menu-divider"></li>
+            <li><a href="#review-section">고객 사례</a></li>
+            <li class="menu-divider"></li>
+          </ul>
+        </nav>
+        <!-- 하단 텍스트 링크 -->
+        <hr class="mobile-menu-divider" />
+        <div class="mobile-menu-bottom-link">
+        <a href="https://super-cendol-354c83.netlify.app" target="_blank" rel="noopener noreferrer" class="register-link">
+          디자이너 인재풀 등록 &gt; 
+        </a>
       </div>
     </div>
   </header>
