디자인 종류 버튼 추가

--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
           <button>상세페이지 디자인</button>
           <button>영상 편집/모션</button>
           <button>제품·패키지 디자인</button>
+          <button>편집 디자인</button>
           <button>기획 서비스</button>
         </div>
       </div>
