--- a/designer/index.html
+++ b/designer/index.html
@@ -7,28 +7,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- SEO 기본 -->
-  <title>스킬나우 | 전담 매니저와 검증된 디자이너, 디자인 협업 솔루션</title>
-  <meta name="description" content="스킬나우는 디자인 외주에 전담 매니저가 함께합니다. 기획부터 디자이너 매칭, 피드백까지 체계적인 협업으로 실패 없는 디자인 결과를 만들어보세요.">
-  <meta name="keywords" content="디자인 외주, 디자인 매니징, 디자인 기획, UIUX 디자인, 상세페이지 디자인, 브랜딩, 스킬나우, 디자인 매칭, 디자인 매니저, 디자인 프로젝트, 콘텐츠 디자인">
+  <title>스킬나우 | 멈추지 않고 성장하는 경력 디자이너의 프로젝트 플랫폼</title>
+  <meta name="description" content="스킬나우 인재풀에 등록하고 멈추지 않고 성장하세요. 실력있는 디자이너를 위한 다양한 프로젝트와 기회가 기다리고 있습니다.">
+  <meta name="keywords" content="경력 디자이너, 디자인 프로젝트, 디자이너 인재풀, 디자인 프리랜서, 경단녀 디자이너, 디자이너 성장, 스킬나우">
   <meta name="author" content="SkillNau">
   <meta name="robots" content="index, follow">
   <meta name="language" content="ko">
 
   <!-- Canonical URL -->
-  <link rel="canonical" href="https://skillnau-landing.vercel.app/">
+  <link rel="canonical" href="https://skillnau-landing.vercel.app/designer/">
 
   <!-- Open Graph (Facebook, LinkedIn 등) -->
   <meta property="og:type" content="website">
-  <meta property="og:title" content="스킬나우 | 전담 매니저와 검증된 디자이너, 디자인 협업 솔루션">
-  <meta property="og:description" content="디자인 외주, 이제 실패하지 마세요. 전담 매니저가 함께하는 스킬나우에서 기획부터 매칭, 피드백까지 원스톱으로 해결하세요.">
+  <meta property="og:title" content="스킬나우 | 멈추지 않고 성장하는 경력 디자이너의 프로젝트 플랫폼">
+  <meta property="og:description" content="일과 성장을 원하는 디자이너를 위해, 스킬나우가 준비한 프로젝트와 기회를 만나보세요.">
   <meta property="og:image" content="https://raw.githubusercontent.com/entjiny/skillnau-landing/main/images/og_img02.png">
   <meta property="og:url" content="https://skillnau-landing.vercel.app/">
   <meta property="og:site_name" content="SkillNau">
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="스킬나우 | 전담 매니저와 검증된 디자이너, 디자인 협업 솔루션">
-  <meta name="twitter:description" content="디자인 외주 실패 이유? 기획과 소통의 부재! 스킬나우가 전담 매니저와 함께 성공적인 디자인 협업을 돕습니다.">
+  <meta name="twitter:title" content="스킬나우 | 멈추지 않고 성장하는 경력 디자이너의 프로젝트 플랫폼">
+  <meta name="twitter:description" content="스킬나우 인재풀에서 실력있는 디자이너를 기다리는 다양한 프로젝트를 확인하세요.">
   <meta name="twitter:image" content="https://raw.githubusercontent.com/entjiny/skillnau-landing/main/images/og_img02.png">
   <meta name="twitter:url" content="https://skillnau-landing.vercel.app/">
 
