--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-<!--C:\Users\hyojin\Documents\skillnau-landing\skillnau-landing 경로 -->
+<!--C:\Users\hyojin\Documents\skillnau-landing 경로 -->
   <!-- 필수 메타 -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -103,7 +103,7 @@
           <span class="black">왜 늘 기대에 못 미칠까요?</span>
         </div>
         <div class="hero-subtext">
-          스킬카우는 디자인 기획부터 소통까지<br class="mobile-br">
+          스킬나우는 디자인 기획부터 소통까지<br class="mobile-br">
           전담 매니저가 함께 합니다.
         </div>
         <a href="https://tally.so/r/w2dyEp" target="_blank" rel="noopener noreferrer" class="cta-btn">지금 디자인 의뢰하기</a>
