--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
   
       <!-- 우측: 액션 버튼 2개 -->
       <div class="header-right">
-        <a href="https://super-cendol-354c83.netlify.app" target="_blank" rel="noopener noreferrer" class="header-btn">프로젝트 무료 등록</a>
-        <a href="https://super-cendol-354c83.netlify.app" target="_blank" rel="noopener noreferrer" class="header-btn">디자이너 인재풀 등록</a>
+        <a href="https://tally.so/r/w2dyEp" target="_blank" rel="noopener noreferrer" class="header-btn">프로젝트 무료 등록</a>
+        <a href="https://tally.so/r/31jrkO" target="_blank" rel="noopener noreferrer" class="header-btn">디자이너 인재풀 등록</a>
       </div>
 
     <button class="hamburger" aria-label="메뉴 열기">
@@ -446,7 +446,7 @@
   <!-- ⬆️ 섹션 바탕은 화이트 (.reviews-wrap) -->
 
   <!-- 1) 타이틀 + 숫자 통계 : worry-box 스타일의 베이지 박스 -->
-  <div class="worry-box reviews-box">
+  <div class="reviews-box">
     <h2 class="reviews-title">실제 고객이 경험한 차이</h2>
     <p class="reviews-sub">기업들의 지속적인 선택에는 이유가 있습니다.</p>
 
