Add vercel.json and update final styles

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <li class="menu-divider"></li>
             <li><a href="#process-section-bg">진행 방법</a></li>
             <li class="menu-divider"></li>
-            <li><a href="#review-section">고객 사례</a></li>
+            <li><a href="#review-cards-section">고객 사례</a></li>
             <li class="menu-divider"></li>
           </ul>
         </nav>
