Add vercel.json and update final styles

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <!-- 하단 텍스트 링크 -->
         <hr class="mobile-menu-divider" />
         <div class="mobile-menu-bottom-link">
-        <a href="https://super-cendol-354c83.netlify.app" target="_blank" rel="noopener noreferrer" class="register-link">
+        <a href="https://tally.so/r/31jrkO" target="_blank" rel="noopener noreferrer" class="register-link">
           디자이너 인재풀 등록 &gt; 
         </a>
         </div>
